Add max perm size and import menus
git-svn-id: https://subversion.assembla.com/svn/mdss@4556 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: c15521397527e9506e635964b7ccc310c8d0a080 [formerly fe71e4957629612f0a80e97737e888bbb2e57bcd]
Former-commit-id: d3850bae7e4bb3aa2f6b9637f1940c3f78271dc9